--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.mysql-connector-java-5.1.24-bin.jar=C:\\Users\\ferna\\Desktop\\mysql-connector-java-5.1.24-bin.jar
-user.properties.file=C:\\Users\\ferna\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\X\u00f3chitl Garza\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
