--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.jar=${dist.dir}/HelpDesk.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.JTattoo-1.6.11.jar=HelpDesk\\dist\\lib\\JTattoo-1.6.11.jar
+file.reference.mail.jar=C:\\Users\\soportedc\\Desktop\\javamail1_4_7\\javamail-1.4.7\\mail.jar
 file.reference.mysql-connector-java-5.1.24-bin.jar=C:\\Users\\ferna\\Desktop\\mysql-connector-java-5.1.24-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.24-bin.jar}:\
-    ${file.reference.JTattoo-1.6.11.jar}
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
