--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.24-bin.jar}:\
     ${file.reference.JTattoo-1.6.11.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
