--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 compile.on.save=true
-file.reference.JTattoo-1.6.11.jar=C:\\Users\\vapor_smith\\Documents\\PENDEJADA\\dist\\lib\\JTattoo-1.6.11.jar
+file.reference.JTattoo-1.6.11.jar=C:\\Users\\vapor_smith\\Documents\\Universidad Polit\u00e9cnica\\Helpdesk\\Librerias\\JTattoo-1.6.11.jar
 file.reference.mail.jar=C:\\Users\\vapor_smith\\Documents\\Universidad Polit\u00e9cnica\\Helpdesk\\javamail1_4_7\\javamail-1.4.7\\mail.jar
 file.reference.mysql-connector-java-5.1.24-bin.jar=C:\\Users\\vapor_smith\\Documents\\mysql-connector-java-5.1.24-bin.jar
 user.properties.file=C:\\Users\\vapor_smith\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
